# informal

./: Cargo.toml  README.md
examples/: guessing_game.rs
src/: lib.rs
